--- a/code/web_server/templates/index.html
+++ b/code/web_server/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Image Viewer</h1>
     {% for path in image_paths %}
-        <img src="{{ path }}" alt="Image">
+        <img src="{{ url_for('get_image', filename=path) }}" alt="Image">
     {% endfor %}
 </body>
 </html>
