Update image container alignment in index.html

--- a/code/web_server/templates/index.html
+++ b/code/web_server/templates/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            text-align: center;
+            
         }
 
         .image-container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content: start;
         }
 
         .image-container img {
